<resources>
    <string name="app_name">Unimelb H1 Hopper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confirm">Confirm</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="start_game">Start Game</string>

    <!-- Strings used for game tools -->
    <string name="copter">copter</string>
    <string name="rocket">rocket</string>
    <string name="clear_monsters">clear monsters</string>
    <string name="reborn">reborn</string>
    <string name="game_tools_instruction">Tap the tool image (Max 3 tools)</string>
    <string name="helicopter">Helicopter</string>
    <string name="rocket_tool">Rocket</string>
    <string name="clear_monsters_tool">Clear Monsters</string>
    <string name="reborn_tool">Reborn</string>
    <string name="time_remaining_placeholder">Time remaining until game tools refreshed\n</string>

    <!--Strings in fragment game-->
    <string name="play_game">Play Game</string>
    <string name="sign_in_up">Sign in/up</string>

    <!--strings for navigator-->
    <string name="user">USER</string>
    <string name="game">GAME</string>
    <string name="game_tools">GAME TOOLS</string>

    <!--strings for tips-->
    <string name="not_logged_in">You have not logged in yet</string>
    <string name="choose_week">Choose week</string>
    <string name="sign_in_here">Already got an account? Sign in here!</string>
    <string name="enter_username">Please enter your username</string>
    <string name="enter_password">Please enter your password</string>
    <string name="sign_up_here">Haven\'t got an account? Sign up here!</string>
    <string name="username_hint">Username: </string>
    <string name="password_hint">Password: </string>
    <string name="confirm_password">Please confirm your password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="play_without_tool">You have not picked any game tools, do you still want to continue?</string>
    <string name="warning">Warning</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="confirm_exit_tool">Are you sure you want to exit? Your game tools are already reduced</string>
    <string name="all_tools_picked">You have picked all items</string>
    <string name="duplicated_tool">"Duplicate items detected!"</string>
    <string name="empty_string" translatable="false"></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out">LOG OUT</string>
    <string name="sign_in_as">You have signed in as  </string>
    <string name="login_as">Successfully logged in as  </string>
    <string name="something_wrong">Something wrong with username/password!</string>
    <string name="username_empty">Username is empty!</string>
    <string name="password_empty">Password is empty!</string>
    <string name="confirm_empty">Confirmed password is empty!</string>
    <string name="not_identical">Password and confirmed password aren\'t identical!</string>
    <string name="sign_up_successful">Successfully sign up!</string>
    <string name="username_exists">Username already exists!</string>
    <string name="world_rank">Your world rank is: </string>
    <string name="your_best_score">Grade</string>
    <string name="select_faculty">Select the faculty</string>
    <string name="select_subject">Select the subject</string>
    <string name="world_best_score">World\'s best scores</string>
    <string name="your_world_ranking">Your world rank is: over 10000</string>
    <string name="play_as_tourist">You are playing as a tourist.</string>
    <string name="play_as_user">You are playing as user: </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmed_password">Confirm Password</string>
    <string name="switch_to_dark">You are in dark environment. Play the game in dark mode?</string>
    <string name="switch_to_bright">You are in bright environment. Play the game in bright mode?</string>
    <string name="light_mode_switching">Light Mode Switching</string>
    <string name="week1" translatable="false">Week 1</string>
    <string name="week2" translatable="false">Week 2</string>
    <string name="week3" translatable="false">Week 3</string>
    <string name="week4" translatable="false">Week 4</string>
    <string name="week5" translatable="false">Week 5</string>
    <string name="week6" translatable="false">Week 6</string>
    <string name="week7" translatable="false">Week 7</string>
    <string name="week8" translatable="false">Week 8</string>
    <string name="week9" translatable="false">Week 9</string>
    <string name="week10" translatable="false">Week10</string>
    <string name="week11" translatable="false">Week11</string>
    <string name="week12" translatable="false">Week12</string>
    <string name="subject1" translatable="false">COMP90018</string>
    <string name="subject2" translatable="false">COMP90049</string>

    <!--strings for game-->
    <string name="got_it">I got it.</string>
    <string name="done">Well Done!.</string>
    <string name="good">Good Job.</string>
    <string name="finish_game">Congratulations on making it through the week.\n</string>
    <string name="complete_game">"You've completed all the tasks for the week. \nKeep working hard."</string>
    <string name="incomplete_game">"Unfortunately, there are some unfinished tasks. \nTry your best."</string>

</resources>