<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserFragmentAfterLogin">

    <TextView
        android:id="@+id/textLoginInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/not_logged_in"
        android:textColor="#111111"
        android:textSize="20sp">
    </TextView>




    <TextView
        android:id="@+id/personalScoresLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/select_faculty"

        android:textColor="#111111"
        android:textSize="20sp">
    </TextView>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:dropDownVerticalOffset="45dp"
        android:spinnerMode="dropdown" />







    <TextView
        android:id="@+id/worldScoresLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/select_subject"

        android:textColor="#111111"
        android:textSize="20sp">
    </TextView>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:dropDownVerticalOffset="45dp"
        android:spinnerMode="dropdown" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:text="Button" />
    </RelativeLayout>

</LinearLayout>