<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/signUpNameValue"
        android:layout_width="0dp"
        android:hint="@string/username"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintHorizontal_bias=".5"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <EditText
        android:id="@+id/signUpPasswordValue0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/signUpNameValue"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </EditText>

    <EditText
        android:id="@+id/signUpPasswordValue1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confrimed_password"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/signUpPasswordValue0"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordValue1"
        app:layout_constraintWidth_percent=".8"></androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>