<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/signInNameValue"
        app:layout_constraintEnd_toStartOf="@+id/signInNameValue"
        app:layout_constraintTop_toTopOf="@+id/signInNameValue"
        android:layout_marginRight="5dp"/>
    <EditText
        android:id="@+id/signInNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias="0.78"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_security_24"
        app:layout_constraintBottom_toBottomOf="@+id/signInPasswordValue"
        app:layout_constraintEnd_toStartOf="@+id/signInPasswordValue"
        app:layout_constraintTop_toTopOf="@+id/signInPasswordValue"
        android:layout_marginRight="5dp"/>
            <EditText
                android:id="@+id/signInPasswordValue"
                android:hint="@string/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_bg"
                app:layout_constraintWidth_percent=".8"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintHorizontal_bias="0.78"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/signInNameValue"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            </EditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPasswordValue"
        app:layout_constraintWidth_percent=".8"></androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>